--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
+
+
 body {
-    background-color: rgb(188, 188, 248);
-}
+margin: 0;
+padding: 0;
+background-color: rgb(188, 188, 248);}
 
 nav {
-    border: 1px  solid pink;
+    background-color: pink;
+}
+.project-tile img{
+    width: 200px;
 }
