--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ background-color: rgb(188, 188, 248);}
 html{
     box-sizing: border-box;
     scroll-behavior: smooth ;
+    font-size: 62.5%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 #navbar {
     display: flex;
@@ -25,6 +31,7 @@ html{
     font-size: 2rem;
     padding: 2rem;
     margin: 0px;
+    text-decoration: none;
 }
 
 .nav-list a:hover {
@@ -41,6 +48,23 @@ html{
     background-image: linear-gradient(pink 0%, rgb(188, 188, 248)100%);
 }
 
+.project-section {
+    text-align: center;
+    padding: 5rem 2rem;
+    background: pink;
+    height: 75%;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+}
+
 figure img{
     width: 200px;
 }
@@ -48,3 +72,18 @@ figure img{
 h1 {
     font-size: 3rem;
 }
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2rem;
+    border-radius: 2px;
+  }
+
+  .contact-details {
+    font-size: 2.4rem;
+    text-shadow: 2px 2px 1px #9e9e9e;
+    transition: transform 0.3s ease-out;
+  }
+  .contact-details:hover {
+    transform: translateY(8px);
+  }
