--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
 body {
 margin: 0;
 padding: 0;
-background-color: rgb(188, 188, 248);}
+background-color: rgb(188, 188, 248);
+}
 
 html{
     box-sizing: border-box;
@@ -11,10 +12,7 @@ html{
     font-size: 62.5%;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
+
 #navbar {
     display: flex;
     justify-content: flex-end;
@@ -37,13 +35,16 @@ a {
 .nav-list a:hover {
     background: rgb(216, 128, 142) ;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+}
 #welcome-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     background-color: pink;
     background-image: linear-gradient(pink 0%, rgb(188, 188, 248)100%);
 }
@@ -87,3 +88,9 @@ h1 {
   .contact-details:hover {
     transform: translateY(8px);
   }
+
+  @media screen and (max max-width 28.75em){
+      .contact-links
+      flex-direction: column;
+      align-items: center;
+ }
