--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a {
     text-align: center;
     padding: 5rem 2rem;
     background: pink;
-    height: 75%;
+    height: 100%;
 }
 
 .projects-grid {
@@ -75,6 +75,8 @@ figure img{
 }
 
 h1 {
+    display: flex;
+    justify-content: center;
     font-size: 3rem;
 }
 
@@ -83,7 +85,12 @@ h1 {
     padding: 1rem 2rem;
     border-radius: 2px;
   }
-
+  
+  
+.contact-links {
+    display: flex;
+    justify-content: center;
+}
   .contact-details {
     font-size: 2.4rem;
     text-shadow: 2px 2px 1px #9e9e9e;
