added CSS to movie list

--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,14 @@ a {
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
-    grid-gap: 4rem;
+    grid-gap: 3rem;
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: auto;
     margin-bottom: 6rem;
 }
+
+
 
 figure img{
     width: 200px;
