--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ background-color: rgb(188, 188, 248);
 html{
     box-sizing: border-box;
     scroll-behavior: smooth ;
-    font-size: 62.5%;
+    font-size: 75%;
 }
 
 
@@ -42,6 +42,8 @@ html{
 a {
     text-decoration: none;
     color: black;
+    justify-content: center;
+   
 }
 #welcome-section {
     display: flex;
@@ -55,25 +57,31 @@ a {
 
 .project-section {
     text-align: center;
-    padding: 5rem 2rem;
+    padding: 2rem 2rem;
     background: pink;
     height: 100%;
+    
 }
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
-    grid-gap: 3rem;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit,minmax(275px, 250px));
+    grid-gap: 2rem;
     width: 100%;
     max-width: 1200px;
     margin: auto;
     margin-bottom: 6rem;
+    
 }
-
-
 
 figure img{
     width: 200px;
+}
+
+figcaption {
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
@@ -86,6 +94,7 @@ h1 {
     display: inline-block;
     padding: 1rem 2rem;
     border-radius: 2px;
+    
   }
   
   
@@ -93,7 +102,8 @@ h1 {
     display: flex;
     justify-content: center;
 }
-  .contact-details {
+
+.contact-details {
     font-size: 2.4rem;
     text-shadow: 2px 2px 1px #9e9e9e;
     transition: transform 0.3s ease-out;
