--- a/star-wars-species/styles.css
+++ b/star-wars-species/styles.css
@@ -8,6 +8,12 @@
     justify-content: space-evenly;
 }
 
+#main {
+    display: flex;
+    flex: wrap;
+    justify-content: space-evenly;
+}
+
 figure img {
     max-height: 12rem;
 }
