--- a/pokemon/pokestyle.css
+++ b/pokemon/pokestyle.css
@@ -5,8 +5,14 @@
     
 }
 
+.pokemonGrid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .pokecard {
     background-color: yellow;
-    justify-content: center;
-    flex-wrap: wrap;
+    width: 200px;
+    height: 250px;
 }
