this is going to be a long week

--- a/pokemon/pokestyle.css
+++ b/pokemon/pokestyle.css
@@ -19,9 +19,7 @@ header {
 
 img {
     width: 200px;
-    display: flex;
-    justify-content: center;
-
+   
 }
 
 .scene {
@@ -31,4 +29,17 @@ img {
     border: 1px solid #CCC;
     margin: 10px 0;
     perspective: 600px;
+}
+
+.card {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+}
+
+.card.is-flipped {
+    transform: rotateY(180deg);
 }
