--- a/pokemon/pokestyle.css
+++ b/pokemon/pokestyle.css
@@ -40,6 +40,13 @@ img {
     position: relative;
 }
 
+.card_face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
 .card.is-flipped {
     transform: rotateY(180deg);
 }
