--- a/pokemon/pokestyle.css
+++ b/pokemon/pokestyle.css
@@ -2,6 +2,7 @@
 * {
     margin: 0px;
     box-sizing: border-box;
+    
 }
 
 header {
@@ -10,6 +11,9 @@ header {
     align-items: center;
 }
 
+body{
+    background: rgb(255, 255, 167);}
+
 .pokemonGrid {
     display: flex;
     flex-wrap: wrap;
@@ -17,14 +21,18 @@ header {
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    display: flex;
+    justify-content: center;
+    border: rgb(0, 0, 0);
+    background-color: rgb(226, 226, 226);
+    margin: 12px;
+    width: 175px;
+    height: 175px;
 }
 
 .scene {
     width: 200px;
     height: 260px;
-    border: 1px solid #CCC;
     margin: 40px 0;
     perspective: 600px;
   }
@@ -38,6 +46,14 @@ img {
     position: relative;
   }
 
+p {
+    display: flex;
+    justify-content: center;
+    margin: 12px;
+    width: 175px;
+    height: 40px;
+    background:  rgb(253, 253, 253);
+}
 .card.is-flipped {
     transform: rotateY(180deg);
   }
@@ -46,18 +62,20 @@ img {
     position: absolute;
     width: 100%;
     height: 100%;
-    color: white;
+    color: black;
+    border: 1px solid black;
     font-size: 30px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 .card__face--front {
-    background: red;
+    background: rgb(238, 192, 67);
 }
 
 .card__face--back { 
-    background: black;
-    color: cornsilk;
+    margin: 30px;
+    background: rgb(43, 43, 170);
+    color: black;
     transform: rotateY(180deg);
 }
 
