--- a/star-wars-films/styles.css
+++ b/star-wars-films/styles.css
@@ -22,6 +22,11 @@ main {
     justify-content: center;
 }
 
+img .nav {
+    position: relative;
+    z-index: 1;
+}
+
 figure {
     margin: 1rem;
     
