--- a/congress/styles.css
+++ b/congress/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: rgb(255, 37, 164);
+  background-image: linear-gradient(rgb(253, 1, 43) 0%, rgb(0, 0, 255)100%);
 }
 
 header {
     text-align: center;
 }
-  .senatorGrid {
+  .senGrid {
     display: flex;
     flex-wrap: wrap;
   }
@@ -16,5 +16,4 @@ header {
   
   figcaption {
     display: flex;
-    justify-content: space-around;
   }
